Add toolbar button type file